<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/action_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/toolbar_title_home"/>

    <item
            android:id="@+id/action_board"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/toolbar_title_board"/>

    <item
            android:id="@+id/action_chat"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/toolbar_title_chat"/>

    <item
            android:id="@+id/action_sale_info"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/toolbar_title_info"/>

    <item
            android:id="@+id/action_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/toolbar_title_profile"/>

</menu>