<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#EFEFEF">

        <!-- our toolbar -->
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Toolbar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_permission"
                android:textColor="#000000"
                android:textSize="18sp" />

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/layoutCameraCollapse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginTop="13dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_photo_camera_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Camera"
                    android:textColor="#2457BD"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/ivCamera"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_chevron_up" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutCameraDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginTop="13dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="사진 촬영을 위한 권한이 필요합니다"
                    android:textColor="#8C8C8C"
                    android:textSize="16sp" />

            </LinearLayout>

            <!-- 첫번째 권한 Layout -->
            <!--LinearLayout
                android:id="@+id/layoutPhoneCollapse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginTop="13dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_phone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Call"
                    android:textColor="#2457BD"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/ivPhone"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_chevron_up" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutPhoneDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginTop="13dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="통화 내역 전송을 위한 권한이 필요합니다"
                    android:textColor="#8C8C8C"
                    android:textSize="16sp" />

            </LinearLayout-->
            <!-- end -->

            <!-- 두번째 권한 Layout -->
            <LinearLayout
                android:id="@+id/layoutStorageCollapse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginTop="13dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_box" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_permission_storage_title"
                    android:textColor="#2457BD"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/ivStorage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_chevron_up" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutStorageDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginTop="13dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_permission_storage_content"
                    android:textColor="#8C8C8C"
                    android:textSize="16sp" />

            </LinearLayout>
            <!-- end -->

            <!-- 세번째 권한 Layout -->
            <!--LinearLayout
                android:id="@+id/layoutGpsCollapse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginTop="13dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_place_marker" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="GPS"
                    android:textColor="#2457BD"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/ivGps"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_chevron_up" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutGpsDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginTop="13dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="위치 추적을 위한 GPS 사용 권한이 필요합니다"
                    android:textColor="#8C8C8C"
                    android:textSize="16sp" />

            </LinearLayout-->
            <!-- end -->

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnAccept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#368AFF"
                android:gravity="center"
                android:text="@string/app_permission_submit"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
